Complete fix for tile blurriness: remove CSS border overrides and clear box-shadow on animation completion

--- a/src/style.scss
+++ b/src/style.scss
@@ -83,10 +83,6 @@
     /* GPU optimization */
 }
 
-.icon-grid-cell:hover .icon-grid-cell-bg {
-    border: none;
-}
-
 .icon-grid-label {
     position: absolute;
     bottom: 6px;
